:bug: Align header items

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -203,7 +203,6 @@
 
     &_list {
       list-style: none;
-      margin: 2rem 0;
 
       li {
         margin: 1rem 0;
@@ -330,6 +329,7 @@
 .container {
   align-items: center;
   display: flex;
+  height: inherit;
   justify-content: space-between;
   margin: 0 auto;
   max-width: 120rem;
